--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "monext/payline-sdk": "*"
     },
     "type": "magento2-module",
+    "version": "1.2.13",
     "authors" : [
         {
             "name" : "Matthieu BOUCHOT",
