--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "monext/module-payline",
     "description": "Magento2 Extension to use the Payline payment solution by Monext",
     "require": {
-        "monext/payline-sdk": "*"
+        "monext/monext-php": "*"
     },
     "type": "magento2-module",
     "version": "1.2.19",
